--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div class="header">
-        <h1>F1 Championship seasons</h1>
+        <h1>{{title}}</h1>
     </div>
     <div class="row">
         <div class="col">
